--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,8 @@
         },
         /* 模块配置 */
         "modules" : {
-            "Share" : {}
+            "Share" : {},
+            "OAuth" : {}
         },
         /* 应用发布信息 */
         "distribute" : {
@@ -53,7 +54,22 @@
             "ios" : {},
             /* SDK配置 */
             "sdkConfigs" : {
-                "share" : {}
+                "share" : {},
+                "oauth" : {
+                    "weixin" : {
+                        "appid" : "123",
+                        "appsecret" : "123",
+                        "UniversalLinks" : ""
+                    },
+                    "qq" : {
+                        "appid" : "123"
+                    },
+                    "sina" : {
+                        "appkey" : "123",
+                        "appsecret" : "123",
+                        "redirect_uri" : "123"
+                    }
+                }
             }
         }
     },
